parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    MultiplicacionIgual
    DEFAULT
    ComillasDobles
    DosPuntos
    NEW
    COMENTARIOSMULTILINEA
    CASE
    FOR
    TRUE
    FINAL
    SWITCH
    MasMas
    IMPORT
    PRINTLN
    MenosMenos
    IMPLEMENTS
    TRY
    EXTENDS
    COMA
    ComillasSimples
    COMENTARIOS
    RETURN
    FALSE
    BREAK
    CATCHTRHOW

Grammar

Rule 0     S' -> program
Rule 1     program -> PUBLIC CLASS Identificador LlaveIzquierda instrucciones LlaveDerecha
Rule 2     instrucciones -> metodo_main LlaveIzquierda declaration_list LlaveDerecha
Rule 3     instrucciones -> declaration_list
Rule 4     metodo_main -> PUBLIC STATIC VOID MAIN ParentesisIzquierdo STRING CorcheteIzquierda CorcheteDerecha ARGS ParentesisDerecho
Rule 5     declaration_list -> declaration_list declaration
Rule 6     declaration_list -> declaration
Rule 7     declaration -> linea
Rule 8     declaration -> sentencia_while
Rule 9     declaration -> sentencia_if
Rule 10    linea -> tipado PuntoyComa
Rule 11    linea -> mensaje PuntoyComa
Rule 12    linea -> modificadores PuntoyComa
Rule 13    modificadores -> PUBLIC tipado
Rule 14    modificadores -> PRIVATE tipado
Rule 15    modificadores -> PROTECTED tipado
Rule 16    tipado -> FLOAT assigment
Rule 17    tipado -> STRING Identificador Asignacion expression_cadena
Rule 18    tipado -> INT assigment
Rule 19    tipado -> DOUBLE assigment
Rule 20    tipado -> BOOLEAN assigment
Rule 21    tipado -> CHAR Identificador Asignacion expression_caracter
Rule 22    mensaje -> SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena ParentesisDerecho
Rule 23    mensaje -> SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo Identificador ParentesisDerecho
Rule 24    mensaje -> SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena SignoMas expression ParentesisDerecho
Rule 25    mensaje -> SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo ParentesisDerecho
Rule 26    sentencia_while -> DO LlaveIzquierda declaration_list LlaveDerecha cabecera_do_while PuntoyComa
Rule 27    sentencia_while -> cabecera_while LlaveIzquierda declaration_list LlaveDerecha
Rule 28    sentencia_if -> cabecera_if ELSE LlaveIzquierda declaration_list LlaveDerecha
Rule 29    sentencia_if -> cabecera_if ELSE cabecera_if
Rule 30    sentencia_if -> cabecera_if
Rule 31    cabecera_do_while -> WHILE ParentesisIzquierdo expression_comparacion ParentesisDerecho
Rule 32    cabecera_do_while -> WHILE ParentesisIzquierdo double_expression_comparacion ParentesisDerecho
Rule 33    cabecera_while -> WHILE ParentesisIzquierdo expression_comparacion ParentesisDerecho
Rule 34    cabecera_while -> WHILE ParentesisIzquierdo double_expression_comparacion ParentesisDerecho
Rule 35    cabecera_if -> IF ParentesisIzquierdo expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha
Rule 36    cabecera_if -> IF ParentesisIzquierdo double_expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha
Rule 37    assigment -> Identificador Asignacion expression
Rule 38    assigment -> Identificador MasIgual expression
Rule 39    assigment -> Identificador MenosIgual expression
Rule 40    assigment -> Identificador DivisionIgual expression
Rule 41    assigment -> Identificador
Rule 42    expression_cadena -> CADENADECARACTERES
Rule 43    expression_caracter -> CARACTER
Rule 44    empty -> <empty>
Rule 45    double_expression_comparacion -> expression_comparacion OR expression_comparacion
Rule 46    double_expression_comparacion -> expression_comparacion AND expression_comparacion
Rule 47    numero_identificador -> Numero
Rule 48    numero_identificador -> Identificador
Rule 49    expression_comparacion -> numero_identificador Diferente numero_identificador
Rule 50    expression_comparacion -> numero_identificador Mayor numero_identificador
Rule 51    expression_comparacion -> numero_identificador MayorIgual numero_identificador
Rule 52    expression_comparacion -> numero_identificador Menor numero_identificador
Rule 53    expression_comparacion -> numero_identificador MenorIgual numero_identificador
Rule 54    expression_comparacion -> numero_identificador ComparacionIgual numero_identificador
Rule 55    expression -> expression SignoMas expression
Rule 56    expression -> expression SignoMenos expression
Rule 57    expression -> expression SignoMultiplicar expression
Rule 58    expression -> expression SignoDividir expression
Rule 59    expression -> ParentesisIzquierdo expression ParentesisDerecho
Rule 60    expression -> Numero
Rule 61    expression -> Identificador

Terminals, with rules where they appear

AND                  : 46
ARGS                 : 4
Asignacion           : 17 21 37
BOOLEAN              : 20
BREAK                : 
CADENADECARACTERES   : 42
CARACTER             : 43
CASE                 : 
CATCHTRHOW           : 
CHAR                 : 21
CLASS                : 1
COMA                 : 
COMENTARIOS          : 
COMENTARIOSMULTILINEA : 
ComillasDobles       : 
ComillasSimples      : 
ComparacionIgual     : 54
CorcheteDerecha      : 4
CorcheteIzquierda    : 4
DEFAULT              : 
DO                   : 26
DOUBLE               : 19
Diferente            : 49
DivisionIgual        : 40
DosPuntos            : 
ELSE                 : 28 29
EXTENDS              : 
FALSE                : 
FINAL                : 
FLOAT                : 16
FOR                  : 
IF                   : 35 36
IMPLEMENTS           : 
IMPORT               : 
INT                  : 18
Identificador        : 1 17 21 23 37 38 39 40 41 48 61
LlaveDerecha         : 1 2 26 27 28 35 36
LlaveIzquierda       : 1 2 26 27 28 35 36
MAIN                 : 4
MasIgual             : 38
MasMas               : 
Mayor                : 50
MayorIgual           : 51
Menor                : 52
MenorIgual           : 53
MenosIgual           : 39
MenosMenos           : 
MultiplicacionIgual  : 
NEW                  : 
Numero               : 47 60
OR                   : 45
OUT                  : 22 23 24 25
PRINT                : 22 23 24 25
PRINTLN              : 
PRIVATE              : 14
PROTECTED            : 15
PUBLIC               : 1 4 13
ParentesisDerecho    : 4 22 23 24 25 31 32 33 34 35 36 59
ParentesisIzquierdo  : 4 22 23 24 25 31 32 33 34 35 36 59
Punto                : 22 22 23 23 24 24 25 25
PuntoyComa           : 10 11 12 26
RETURN               : 
STATIC               : 4
STRING               : 4 17
SWITCH               : 
SYSTEM               : 22 23 24 25
SignoDividir         : 58
SignoMas             : 24 55
SignoMenos           : 56
SignoMultiplicar     : 57
TRUE                 : 
TRY                  : 
VOID                 : 4
WHILE                : 31 32 33 34
error                : 

Nonterminals, with rules where they appear

assigment            : 16 18 19 20
cabecera_do_while    : 26
cabecera_if          : 28 29 29 30
cabecera_while       : 27
declaration          : 5 6
declaration_list     : 2 3 5 26 27 28 35 36
double_expression_comparacion : 32 34 36
empty                : 
expression           : 24 37 38 39 40 55 55 56 56 57 57 58 58 59
expression_cadena    : 17 22 24
expression_caracter  : 21
expression_comparacion : 31 33 35 45 45 46 46
instrucciones        : 1
linea                : 7
mensaje              : 11
metodo_main          : 2
modificadores        : 12
numero_identificador : 49 49 50 50 51 51 52 52 53 53 54 54
program              : 0
sentencia_if         : 9
sentencia_while      : 8
tipado               : 10 13 14 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PUBLIC CLASS Identificador LlaveIzquierda instrucciones LlaveDerecha

    PUBLIC          shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PUBLIC . CLASS Identificador LlaveIzquierda instrucciones LlaveDerecha

    CLASS           shift and go to state 3


state 3

    (1) program -> PUBLIC CLASS . Identificador LlaveIzquierda instrucciones LlaveDerecha

    Identificador   shift and go to state 4


state 4

    (1) program -> PUBLIC CLASS Identificador . LlaveIzquierda instrucciones LlaveDerecha

    LlaveIzquierda  shift and go to state 5


state 5

    (1) program -> PUBLIC CLASS Identificador LlaveIzquierda . instrucciones LlaveDerecha
    (2) instrucciones -> . metodo_main LlaveIzquierda declaration_list LlaveDerecha
    (3) instrucciones -> . declaration_list
    (4) metodo_main -> . PUBLIC STATIC VOID MAIN ParentesisIzquierdo STRING CorcheteIzquierda CorcheteDerecha ARGS ParentesisDerecho
    (5) declaration_list -> . declaration_list declaration
    (6) declaration_list -> . declaration
    (7) declaration -> . linea
    (8) declaration -> . sentencia_while
    (9) declaration -> . sentencia_if
    (10) linea -> . tipado PuntoyComa
    (11) linea -> . mensaje PuntoyComa
    (12) linea -> . modificadores PuntoyComa
    (26) sentencia_while -> . DO LlaveIzquierda declaration_list LlaveDerecha cabecera_do_while PuntoyComa
    (27) sentencia_while -> . cabecera_while LlaveIzquierda declaration_list LlaveDerecha
    (28) sentencia_if -> . cabecera_if ELSE LlaveIzquierda declaration_list LlaveDerecha
    (29) sentencia_if -> . cabecera_if ELSE cabecera_if
    (30) sentencia_if -> . cabecera_if
    (16) tipado -> . FLOAT assigment
    (17) tipado -> . STRING Identificador Asignacion expression_cadena
    (18) tipado -> . INT assigment
    (19) tipado -> . DOUBLE assigment
    (20) tipado -> . BOOLEAN assigment
    (21) tipado -> . CHAR Identificador Asignacion expression_caracter
    (22) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena ParentesisDerecho
    (23) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo Identificador ParentesisDerecho
    (24) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena SignoMas expression ParentesisDerecho
    (25) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo ParentesisDerecho
    (13) modificadores -> . PUBLIC tipado
    (14) modificadores -> . PRIVATE tipado
    (15) modificadores -> . PROTECTED tipado
    (33) cabecera_while -> . WHILE ParentesisIzquierdo expression_comparacion ParentesisDerecho
    (34) cabecera_while -> . WHILE ParentesisIzquierdo double_expression_comparacion ParentesisDerecho
    (35) cabecera_if -> . IF ParentesisIzquierdo expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha
    (36) cabecera_if -> . IF ParentesisIzquierdo double_expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha

    PUBLIC          shift and go to state 29
    DO              shift and go to state 6
    FLOAT           shift and go to state 22
    STRING          shift and go to state 14
    INT             shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOLEAN         shift and go to state 26
    CHAR            shift and go to state 13
    SYSTEM          shift and go to state 24
    PRIVATE         shift and go to state 12
    PROTECTED       shift and go to state 9
    WHILE           shift and go to state 8
    IF              shift and go to state 18

    cabecera_if                    shift and go to state 19
    sentencia_while                shift and go to state 11
    cabecera_while                 shift and go to state 17
    sentencia_if                   shift and go to state 30
    instrucciones                  shift and go to state 23
    declaration_list               shift and go to state 25
    modificadores                  shift and go to state 7
    metodo_main                    shift and go to state 27
    tipado                         shift and go to state 15
    declaration                    shift and go to state 16
    mensaje                        shift and go to state 28
    linea                          shift and go to state 10

state 6

    (26) sentencia_while -> DO . LlaveIzquierda declaration_list LlaveDerecha cabecera_do_while PuntoyComa

    LlaveIzquierda  shift and go to state 31


state 7

    (12) linea -> modificadores . PuntoyComa

    PuntoyComa      shift and go to state 32


state 8

    (33) cabecera_while -> WHILE . ParentesisIzquierdo expression_comparacion ParentesisDerecho
    (34) cabecera_while -> WHILE . ParentesisIzquierdo double_expression_comparacion ParentesisDerecho

    ParentesisIzquierdo shift and go to state 33


state 9

    (15) modificadores -> PROTECTED . tipado
    (16) tipado -> . FLOAT assigment
    (17) tipado -> . STRING Identificador Asignacion expression_cadena
    (18) tipado -> . INT assigment
    (19) tipado -> . DOUBLE assigment
    (20) tipado -> . BOOLEAN assigment
    (21) tipado -> . CHAR Identificador Asignacion expression_caracter

    FLOAT           shift and go to state 22
    STRING          shift and go to state 14
    INT             shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOLEAN         shift and go to state 26
    CHAR            shift and go to state 13

    tipado                         shift and go to state 34

state 10

    (7) declaration -> linea .

    LlaveDerecha    reduce using rule 7 (declaration -> linea .)
    DO              reduce using rule 7 (declaration -> linea .)
    FLOAT           reduce using rule 7 (declaration -> linea .)
    STRING          reduce using rule 7 (declaration -> linea .)
    INT             reduce using rule 7 (declaration -> linea .)
    DOUBLE          reduce using rule 7 (declaration -> linea .)
    BOOLEAN         reduce using rule 7 (declaration -> linea .)
    CHAR            reduce using rule 7 (declaration -> linea .)
    SYSTEM          reduce using rule 7 (declaration -> linea .)
    PUBLIC          reduce using rule 7 (declaration -> linea .)
    PRIVATE         reduce using rule 7 (declaration -> linea .)
    PROTECTED       reduce using rule 7 (declaration -> linea .)
    WHILE           reduce using rule 7 (declaration -> linea .)
    IF              reduce using rule 7 (declaration -> linea .)


state 11

    (8) declaration -> sentencia_while .

    LlaveDerecha    reduce using rule 8 (declaration -> sentencia_while .)
    DO              reduce using rule 8 (declaration -> sentencia_while .)
    FLOAT           reduce using rule 8 (declaration -> sentencia_while .)
    STRING          reduce using rule 8 (declaration -> sentencia_while .)
    INT             reduce using rule 8 (declaration -> sentencia_while .)
    DOUBLE          reduce using rule 8 (declaration -> sentencia_while .)
    BOOLEAN         reduce using rule 8 (declaration -> sentencia_while .)
    CHAR            reduce using rule 8 (declaration -> sentencia_while .)
    SYSTEM          reduce using rule 8 (declaration -> sentencia_while .)
    PUBLIC          reduce using rule 8 (declaration -> sentencia_while .)
    PRIVATE         reduce using rule 8 (declaration -> sentencia_while .)
    PROTECTED       reduce using rule 8 (declaration -> sentencia_while .)
    WHILE           reduce using rule 8 (declaration -> sentencia_while .)
    IF              reduce using rule 8 (declaration -> sentencia_while .)


state 12

    (14) modificadores -> PRIVATE . tipado
    (16) tipado -> . FLOAT assigment
    (17) tipado -> . STRING Identificador Asignacion expression_cadena
    (18) tipado -> . INT assigment
    (19) tipado -> . DOUBLE assigment
    (20) tipado -> . BOOLEAN assigment
    (21) tipado -> . CHAR Identificador Asignacion expression_caracter

    FLOAT           shift and go to state 22
    STRING          shift and go to state 14
    INT             shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOLEAN         shift and go to state 26
    CHAR            shift and go to state 13

    tipado                         shift and go to state 35

state 13

    (21) tipado -> CHAR . Identificador Asignacion expression_caracter

    Identificador   shift and go to state 36


state 14

    (17) tipado -> STRING . Identificador Asignacion expression_cadena

    Identificador   shift and go to state 37


state 15

    (10) linea -> tipado . PuntoyComa

    PuntoyComa      shift and go to state 38


state 16

    (6) declaration_list -> declaration .

    LlaveDerecha    reduce using rule 6 (declaration_list -> declaration .)
    DO              reduce using rule 6 (declaration_list -> declaration .)
    FLOAT           reduce using rule 6 (declaration_list -> declaration .)
    STRING          reduce using rule 6 (declaration_list -> declaration .)
    INT             reduce using rule 6 (declaration_list -> declaration .)
    DOUBLE          reduce using rule 6 (declaration_list -> declaration .)
    BOOLEAN         reduce using rule 6 (declaration_list -> declaration .)
    CHAR            reduce using rule 6 (declaration_list -> declaration .)
    SYSTEM          reduce using rule 6 (declaration_list -> declaration .)
    PUBLIC          reduce using rule 6 (declaration_list -> declaration .)
    PRIVATE         reduce using rule 6 (declaration_list -> declaration .)
    PROTECTED       reduce using rule 6 (declaration_list -> declaration .)
    WHILE           reduce using rule 6 (declaration_list -> declaration .)
    IF              reduce using rule 6 (declaration_list -> declaration .)


state 17

    (27) sentencia_while -> cabecera_while . LlaveIzquierda declaration_list LlaveDerecha

    LlaveIzquierda  shift and go to state 39


state 18

    (35) cabecera_if -> IF . ParentesisIzquierdo expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha
    (36) cabecera_if -> IF . ParentesisIzquierdo double_expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha

    ParentesisIzquierdo shift and go to state 40


state 19

    (28) sentencia_if -> cabecera_if . ELSE LlaveIzquierda declaration_list LlaveDerecha
    (29) sentencia_if -> cabecera_if . ELSE cabecera_if
    (30) sentencia_if -> cabecera_if .

    ELSE            shift and go to state 41
    LlaveDerecha    reduce using rule 30 (sentencia_if -> cabecera_if .)
    DO              reduce using rule 30 (sentencia_if -> cabecera_if .)
    FLOAT           reduce using rule 30 (sentencia_if -> cabecera_if .)
    STRING          reduce using rule 30 (sentencia_if -> cabecera_if .)
    INT             reduce using rule 30 (sentencia_if -> cabecera_if .)
    DOUBLE          reduce using rule 30 (sentencia_if -> cabecera_if .)
    BOOLEAN         reduce using rule 30 (sentencia_if -> cabecera_if .)
    CHAR            reduce using rule 30 (sentencia_if -> cabecera_if .)
    SYSTEM          reduce using rule 30 (sentencia_if -> cabecera_if .)
    PUBLIC          reduce using rule 30 (sentencia_if -> cabecera_if .)
    PRIVATE         reduce using rule 30 (sentencia_if -> cabecera_if .)
    PROTECTED       reduce using rule 30 (sentencia_if -> cabecera_if .)
    WHILE           reduce using rule 30 (sentencia_if -> cabecera_if .)
    IF              reduce using rule 30 (sentencia_if -> cabecera_if .)


state 20

    (18) tipado -> INT . assigment
    (37) assigment -> . Identificador Asignacion expression
    (38) assigment -> . Identificador MasIgual expression
    (39) assigment -> . Identificador MenosIgual expression
    (40) assigment -> . Identificador DivisionIgual expression
    (41) assigment -> . Identificador

    Identificador   shift and go to state 43

    assigment                      shift and go to state 42

state 21

    (19) tipado -> DOUBLE . assigment
    (37) assigment -> . Identificador Asignacion expression
    (38) assigment -> . Identificador MasIgual expression
    (39) assigment -> . Identificador MenosIgual expression
    (40) assigment -> . Identificador DivisionIgual expression
    (41) assigment -> . Identificador

    Identificador   shift and go to state 43

    assigment                      shift and go to state 44

state 22

    (16) tipado -> FLOAT . assigment
    (37) assigment -> . Identificador Asignacion expression
    (38) assigment -> . Identificador MasIgual expression
    (39) assigment -> . Identificador MenosIgual expression
    (40) assigment -> . Identificador DivisionIgual expression
    (41) assigment -> . Identificador

    Identificador   shift and go to state 43

    assigment                      shift and go to state 45

state 23

    (1) program -> PUBLIC CLASS Identificador LlaveIzquierda instrucciones . LlaveDerecha

    LlaveDerecha    shift and go to state 46


state 24

    (22) mensaje -> SYSTEM . Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena ParentesisDerecho
    (23) mensaje -> SYSTEM . Punto OUT Punto PRINT ParentesisIzquierdo Identificador ParentesisDerecho
    (24) mensaje -> SYSTEM . Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena SignoMas expression ParentesisDerecho
    (25) mensaje -> SYSTEM . Punto OUT Punto PRINT ParentesisIzquierdo ParentesisDerecho

    Punto           shift and go to state 47


state 25

    (3) instrucciones -> declaration_list .
    (5) declaration_list -> declaration_list . declaration
    (7) declaration -> . linea
    (8) declaration -> . sentencia_while
    (9) declaration -> . sentencia_if
    (10) linea -> . tipado PuntoyComa
    (11) linea -> . mensaje PuntoyComa
    (12) linea -> . modificadores PuntoyComa
    (26) sentencia_while -> . DO LlaveIzquierda declaration_list LlaveDerecha cabecera_do_while PuntoyComa
    (27) sentencia_while -> . cabecera_while LlaveIzquierda declaration_list LlaveDerecha
    (28) sentencia_if -> . cabecera_if ELSE LlaveIzquierda declaration_list LlaveDerecha
    (29) sentencia_if -> . cabecera_if ELSE cabecera_if
    (30) sentencia_if -> . cabecera_if
    (16) tipado -> . FLOAT assigment
    (17) tipado -> . STRING Identificador Asignacion expression_cadena
    (18) tipado -> . INT assigment
    (19) tipado -> . DOUBLE assigment
    (20) tipado -> . BOOLEAN assigment
    (21) tipado -> . CHAR Identificador Asignacion expression_caracter
    (22) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena ParentesisDerecho
    (23) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo Identificador ParentesisDerecho
    (24) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena SignoMas expression ParentesisDerecho
    (25) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo ParentesisDerecho
    (13) modificadores -> . PUBLIC tipado
    (14) modificadores -> . PRIVATE tipado
    (15) modificadores -> . PROTECTED tipado
    (33) cabecera_while -> . WHILE ParentesisIzquierdo expression_comparacion ParentesisDerecho
    (34) cabecera_while -> . WHILE ParentesisIzquierdo double_expression_comparacion ParentesisDerecho
    (35) cabecera_if -> . IF ParentesisIzquierdo expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha
    (36) cabecera_if -> . IF ParentesisIzquierdo double_expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha

    LlaveDerecha    reduce using rule 3 (instrucciones -> declaration_list .)
    DO              shift and go to state 6
    FLOAT           shift and go to state 22
    STRING          shift and go to state 14
    INT             shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOLEAN         shift and go to state 26
    CHAR            shift and go to state 13
    SYSTEM          shift and go to state 24
    PUBLIC          shift and go to state 49
    PRIVATE         shift and go to state 12
    PROTECTED       shift and go to state 9
    WHILE           shift and go to state 8
    IF              shift and go to state 18

    cabecera_if                    shift and go to state 19
    sentencia_while                shift and go to state 11
    cabecera_while                 shift and go to state 17
    tipado                         shift and go to state 15
    modificadores                  shift and go to state 7
    linea                          shift and go to state 10
    declaration                    shift and go to state 48
    mensaje                        shift and go to state 28
    sentencia_if                   shift and go to state 30

state 26

    (20) tipado -> BOOLEAN . assigment
    (37) assigment -> . Identificador Asignacion expression
    (38) assigment -> . Identificador MasIgual expression
    (39) assigment -> . Identificador MenosIgual expression
    (40) assigment -> . Identificador DivisionIgual expression
    (41) assigment -> . Identificador

    Identificador   shift and go to state 43

    assigment                      shift and go to state 50

state 27

    (2) instrucciones -> metodo_main . LlaveIzquierda declaration_list LlaveDerecha

    LlaveIzquierda  shift and go to state 51


state 28

    (11) linea -> mensaje . PuntoyComa

    PuntoyComa      shift and go to state 52


state 29

    (4) metodo_main -> PUBLIC . STATIC VOID MAIN ParentesisIzquierdo STRING CorcheteIzquierda CorcheteDerecha ARGS ParentesisDerecho
    (13) modificadores -> PUBLIC . tipado
    (16) tipado -> . FLOAT assigment
    (17) tipado -> . STRING Identificador Asignacion expression_cadena
    (18) tipado -> . INT assigment
    (19) tipado -> . DOUBLE assigment
    (20) tipado -> . BOOLEAN assigment
    (21) tipado -> . CHAR Identificador Asignacion expression_caracter

    STATIC          shift and go to state 54
    FLOAT           shift and go to state 22
    STRING          shift and go to state 14
    INT             shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOLEAN         shift and go to state 26
    CHAR            shift and go to state 13

    tipado                         shift and go to state 53

state 30

    (9) declaration -> sentencia_if .

    LlaveDerecha    reduce using rule 9 (declaration -> sentencia_if .)
    DO              reduce using rule 9 (declaration -> sentencia_if .)
    FLOAT           reduce using rule 9 (declaration -> sentencia_if .)
    STRING          reduce using rule 9 (declaration -> sentencia_if .)
    INT             reduce using rule 9 (declaration -> sentencia_if .)
    DOUBLE          reduce using rule 9 (declaration -> sentencia_if .)
    BOOLEAN         reduce using rule 9 (declaration -> sentencia_if .)
    CHAR            reduce using rule 9 (declaration -> sentencia_if .)
    SYSTEM          reduce using rule 9 (declaration -> sentencia_if .)
    PUBLIC          reduce using rule 9 (declaration -> sentencia_if .)
    PRIVATE         reduce using rule 9 (declaration -> sentencia_if .)
    PROTECTED       reduce using rule 9 (declaration -> sentencia_if .)
    WHILE           reduce using rule 9 (declaration -> sentencia_if .)
    IF              reduce using rule 9 (declaration -> sentencia_if .)


state 31

    (26) sentencia_while -> DO LlaveIzquierda . declaration_list LlaveDerecha cabecera_do_while PuntoyComa
    (5) declaration_list -> . declaration_list declaration
    (6) declaration_list -> . declaration
    (7) declaration -> . linea
    (8) declaration -> . sentencia_while
    (9) declaration -> . sentencia_if
    (10) linea -> . tipado PuntoyComa
    (11) linea -> . mensaje PuntoyComa
    (12) linea -> . modificadores PuntoyComa
    (26) sentencia_while -> . DO LlaveIzquierda declaration_list LlaveDerecha cabecera_do_while PuntoyComa
    (27) sentencia_while -> . cabecera_while LlaveIzquierda declaration_list LlaveDerecha
    (28) sentencia_if -> . cabecera_if ELSE LlaveIzquierda declaration_list LlaveDerecha
    (29) sentencia_if -> . cabecera_if ELSE cabecera_if
    (30) sentencia_if -> . cabecera_if
    (16) tipado -> . FLOAT assigment
    (17) tipado -> . STRING Identificador Asignacion expression_cadena
    (18) tipado -> . INT assigment
    (19) tipado -> . DOUBLE assigment
    (20) tipado -> . BOOLEAN assigment
    (21) tipado -> . CHAR Identificador Asignacion expression_caracter
    (22) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena ParentesisDerecho
    (23) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo Identificador ParentesisDerecho
    (24) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo expression_cadena SignoMas expression ParentesisDerecho
    (25) mensaje -> . SYSTEM Punto OUT Punto PRINT ParentesisIzquierdo ParentesisDerecho
    (13) modificadores -> . PUBLIC tipado
    (14) modificadores -> . PRIVATE tipado
    (15) modificadores -> . PROTECTED tipado
    (33) cabecera_while -> . WHILE ParentesisIzquierdo expression_comparacion ParentesisDerecho
    (34) cabecera_while -> . WHILE ParentesisIzquierdo double_expression_comparacion ParentesisDerecho
    (35) cabecera_if -> . IF ParentesisIzquierdo expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha
    (36) cabecera_if -> . IF ParentesisIzquierdo double_expression_comparacion ParentesisDerecho LlaveIzquierda declaration_list LlaveDerecha

    DO              shift and go to state 6
    FLOAT           shift and go to state 22
    STRING          shift and go to state 14
    INT             shift and go to state 20
    DOUBLE          shift and go to state 21
    BOOLEAN         shift and go to state 26
    CHAR            shift and go to state 13
    SYSTEM          shift and go to state 24
    PUBLIC          shift and go to state 49
    PRIVATE         shift and go to state 12
    PROTECTED       shift and go to state 9
    WHILE           shift and go to state 8
    IF              shift and go to state 18

    cabecera_if                    shift and go to state 19
    sentencia_while                shift and go to state 11
    cabecera_while                 shift and go to state 17
    tipado                         shift and go to state 15
    declaration_list               shift and go to state 55
    modificadores                  shift and go to state 7
    linea                          shift and go to state 10
    declaration                    shift and go to state 16
    mensaje                        shift and go to state 28
    sentencia_if                   shift and go to state 30

state 32

    (12) linea -> modificadores PuntoyComa .

    DO              reduce using rule 12 (linea -> modificadores PuntoyComa .)
    FLOAT           reduce using rule 12 (linea -> modificadores PuntoyComa .)
    STRING          reduce using rule 12 (linea -> modificadores PuntoyComa .)
    INT             reduce using rule 12 (linea -> modificadores PuntoyComa .)
    DOUBLE          reduce using rule 12 (linea -> modificadores PuntoyComa .)
    BOOLEAN         reduce using rule 12 (linea -> modificadores PuntoyComa .)
    CHAR            reduce using rule 12 (linea -> modificadores PuntoyComa .)
    SYSTEM          reduce using rule 12 (linea -> modificadores PuntoyComa .)
    PUBLIC          reduce using rule 12 (linea -> modificadores PuntoyComa .)
    PRIVATE         reduce using rule 12 (linea -> modificadores PuntoyComa .)
    PROTECTED       reduce using rule 12 (linea -> modificadores PuntoyComa .)
    WHILE           reduce using rule 12 (linea -> modificadores PuntoyComa .)
    IF              reduce using rule 12 (linea -> modificadores PuntoyComa .)
    LlaveDerecha    reduce using rule 12 (linea -> modificadores PuntoyComa .)


state 33

    (33) cabecera_while -> WHILE ParentesisIzquierdo . expression_comparacion ParentesisDerecho
    (34) cabecera_while -> WHILE ParentesisIzquierdo . double_expression_comparacion ParentesisDerecho
    (49) expression_comparacion -> . numero_identificador Diferente numero_identificador
    (50) expression_comparacion -> . numero_identificador Mayor numero_identificador
    (51) expression_comparacion -> . numero_identificador MayorIgual numero_identificador
    (52) expression_comparacion -> . numero_identificador Menor numero_identificador
    (53) expression_comparacion -> . numero_identificador MenorIgual numero_identificador
    (54) expression_comparacion -> . numero_identificador ComparacionIgual numero_identificador
    (45) double_expression_comparacion -> . expression_comparacion OR expression_comparacion
    (46) double_expression_comparacion -> . expression_comparacion AND expression_comparacion
    (47) numero_identificador -> . Numero
    (48) numero_identificador -> . Identificador

    Numero          shift and go to state 58
    Identificador   shift and go to state 56

    double_expression_comparacion  shift and go to state 60
    expression_comparacion         shift and go to state 57
    numero_identificador           shift and go to state 59

state 34

    (15) modificadores -> PROTECTED tipado .

    PuntoyComa      reduce using rule 15 (modificadores -> PROTECTED tipado .)


state 35

    (14) modificadores -> PRIVATE tipado .

    PuntoyComa      reduce using rule 14 (modificadores -> PRIVATE tipado .)


state 36

    (21) tipado -> CHAR Identificador . Asignacion expression_caracter

    Asignacion      shift and go to state 61


state 37

    (17) tipado -> STRING Identificador . Asignacion expression_cadena

    Asignacion      shift and go to state 62


state 38

    (10) linea -> tipado PuntoyComa .

    DO              reduce using rule 10 (linea -> tipado PuntoyComa .)
    FLOAT           reduce using rule 10 (linea -> tipado PuntoyComa .)
    STRING          reduce using rule 10 (linea -> tipado PuntoyComa .)
    INT             reduce using rule 10 (linea -> tipado PuntoyComa .)
    DOUBLE          reduce using rule 10 (linea -> tipado PuntoyComa .)
    BOOLEAN         reduce using rule 10 (linea -> tipado PuntoyComa .)
    CHAR            reduce using rule 10 (linea -> tipado PuntoyComa .)
    SYSTEM          reduce using rule 10 (linea -> tipado PuntoyComa .)
    PUBLIC          reduce using rule 10 (linea -> tipado PuntoyComa .)
    PRIVATE         reduce using rule 10 (linea -> tipado PuntoyComa .)
    PROTECTED       reduce using rule 10 (linea -> tipado PuntoyComa .)
    WHILE           reduce using rule 10 (linea -> tipado PuntoyComa .)
    IF              reduce using rule 10 (linea -> tipado PuntoyComa .)
    LlaveDerecha    reduce using rule 10 (linea -> tipado PuntoyComa .)


state 39
